feature(user): create an endpoint to get user's loans
- create an endpoint to get all the loans requested by the logged in user

[Finishes #166058055]
