# swagger.json
@@ -287,6 +287,49 @@
           }
         }
       },
+      "/users/me/loans": {
+        "parameters": [
+          {
+            "name": "token",
+            "in": "header",
+            "required": true,
+            "description": "JSON Web Token authorizing the user to visit this route",
+            "type": "string"
+          }
+        ],
+        "get": {
+          "tags": [
+            "Users"
+          ],
+          "summary": "Get the logged in user's loans",
+          "description": "Get the logged in user's loans",
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "User's loans gotten successfully",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "status": {
+                    "type": "integer"
+                  },
+                  "data": {
+                    "$ref": "#/definitions/Loans"
+                  }
+                }
+              }
+            },
+            "401": {
+              "description": "Authentication error",
+              "schema": {
+                "$ref": "#/definitions/Error"
+              }
+            }
+          }
+        }
+      },
       "/users/{userEmail}": {
         "parameters": [
           {
